2017-12-21  Daniel Robbins  <drobbins@funtoo.org>

	* dns/dnssec.py: migrated code from pycrypto (apparently no
	  longer maintained) to pycryptodome. All tests passing.

2018-07-18  Tomas Krizek  <tomas.krizek@nic.cz>

	* Support for obsolete Python 2.6 and 3.3 (both EOL) dropped.

2017-01-02  Bob Halley  <halley@dnspython.org>

	* dns/e164.py: to_e164() was returning binary instead of text,
	  a Py2/Py3 merge bug.

	* The IPv4 and IPv6 inet_ntoa() functions were returning binary
	  instead of text, a Py2/Py3 merge bug.

2017-01-01  Bob Halley  <halley@dnspython.org>

	* dns/rdatatype.py: CNAME is now a singleton, as the reasons
	  for permitting multiple CNAMEs are now largely historical.

2016-11-15  Bob Halley  <halley@dnspython.org>

	* Fixed regression where trailing zeros in APL RRs were not
	  suppressed, and then fixed the problem where trailing zeros
	  were not added back properly on python 3 when needed.

2016-10-10  Bob Halley  <halley@dnspython.org>

	* Added OPENPGPKEY RR support.

2016-09-30  Bob Halley  <halley@dnspython.org>

	* Much of the internals of dns.query.udp() and dns.query.tcp()
	  have been factored out into dns.query.send_udp(),
	  dns.query.receive_udp(), dns.query.send_tcp(), and
	  dns.query.receive_tcp().  Applications which want more control
	  over the socket may find the new routines helpful; for example
	  it would be easy to send multiple queries over a single TCP
	  connection.

2016-09-30  Bob Halley  <halley@dnspython.org>

	* (Version 1.15.0 released)

2016-09-29  Bob Halley  <halley@dnspython.org>

	* IDNA 2008 support is now available if the "idna" module has been
	  installed and IDNA 2008 is requested.  The default IDNA behavior
	  is still IDNA 2003.  The new IDNA codec mechanism is currently
	  only useful for direct calls to dns.name.from_text() or
	  dns.name.from_unicode(), but in future releases it will be
	  deployed throughout dnspython, e.g. so that you can read a