@@ -62,7 +62,7 @@ direct manipulation of DNS zones, messages, names, and records.""",
     'provides': ['dns'],
     'extras_require': {
         'IDNA': ['idna>=2.1'],
-        'DNSSEC': ['pycrypto>=2.6.1', 'ecdsa>=0.13'],
+        'DNSSEC': ['pycryptodome', 'ecdsa>=0.13'],
         },
     }
 
