@@ -1,7 +1,8 @@
 2017-12-21  Daniel Robbins  <drobbins@funtoo.org>
 
 	* dns/dnssec.py: migrated code from pycrypto (apparently no
-	  longer maintained) to pycryptodome. All tests passing.
+	  longer maintained) to pycryptodome/pycryptodomex.
+	  All tests passing.
 
 2018-07-18  Tomas Krizek  <tomas.krizek@nic.cz>
 
